--- a/yml/HB_linux64.yml
+++ b/yml/HB_linux64.yml
@@ -1,130 +1,130 @@
 name: HB
 channels:
-  - intel
-  - defaults
   - conda-forge
 dependencies:
-  - affine=2.2.2=py36_0
-  - asn1crypto=0.24.0=py36_0
-  - attrs=19.1.0=py36_1
-  - blas=1.0=openblas
-  - boto3=1.9.162=py_0
-  - botocore=1.12.163=py_0
-  - bzip2=1.0.6=17
-  - cairo=1.14.12=h77bcde2_0
-  - certifi=2018.1.18=py36_2
-  - cffi=1.12.3=py36h2e261b9_0
-  - click=7.0=py36_0
+  - _libgcc_mutex=0.1=conda_forge
+  - _openmp_mutex=4.5=1_gnu
+  - affine=2.3.0=py_0
+  - attrs=20.2.0=pyh9f0ad1d_0
+  - boost-cpp=1.74.0=h9359b55_0
+  - bzip2=1.0.8=h516909a_3
+  - c-ares=1.16.1=h516909a_3
+  - ca-certificates=2020.6.20=hecda079_0
+  - cairo=1.16.0=h3fc0475_1005
+  - certifi=2020.6.20=py38h32f6830_0
+  - cfitsio=3.470=hce51eda_6
+  - cftime=1.2.1=py38h8790de6_0
+  - click=7.1.2=pyh9f0ad1d_0
   - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py36_0
-  - cryptography=2.3.1=py36hc365091_0
-  - curl=7.61.0=h84994c4_0
-  - cycler=0.10.0=py36_0
-  - daal=2019.0=intel_120
-  - dbus=1.13.2=hc3f9b76_0
-  - docutils=0.14=py36hb0f60f5_0
-  - expat=2.2.6=he6710b0_0
-  - fiona=1.7.10=py36h48a52f0_0
-  - fontconfig=2.12.6=h49f89f6_0
-  - freetype=2.8=hab7d2ae_1
-  - freexl=1.0.5=h14c3975_0
-  - gdal=2.2.2=py36hc209d97_1
-  - geopandas=0.6.1=py_0
-  - geos=3.6.2=heeff764_2
-  - giflib=5.1.4=h14c3975_1
-  - glib=2.53.6=h5d9569c_2
-  - gst-plugins-base=1.12.4=h33fb286_0
-  - gstreamer=1.12.4=hb53b477_0
-  - h5py=2.8.0=py36h39dcb92_0
-  - hdf4=4.2.13=h3ca952b_2
-  - hdf5=1.8.18=h6792536_1
-  - icc_rt=2019.4=intel_235
-  - icu=58.2=h9c2bf20_1
-  - idna=2.8=py36_0
-  - intel-openmp=2019.4=intel_235
-  - intelpython=2019.4=0
-  - intelpython3_core=2019.4=0
-  - jmespath=0.9.4=py_0
-  - jpeg=9b=h024ee3a_2
-  - json-c=0.12.1=ha6a3662_2
-  - kealib=1.4.7=h5472223_5
-  - libboost=1.65.1=habcd387_4
-  - libcurl=7.61.0=h1ad7b7a_0
-  - libdap4=3.19.1=h6ec2957_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libgdal=2.2.2=h6bd4d82_1
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libkml=1.3.0=h9d32c78_3
-  - libnetcdf=4.4.1.1=h97d33d9_8
-  - libopenblas=0.3.10=h5a2b251_0
-  - libpng=1.6.37=hbc83047_0
-  - libpq=9.6.6=h1f21990_0
-  - libspatialindex=1.9.3=he6710b0_0
-  - libspatialite=4.3.0a=h72746d6_18
-  - libssh2=1.8.0=h9cfc8f7_4
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - libtiff=4.0.9=he85c1e1_1
-  - libuuid=1.0.3=h1bed415_2
-  - libxcb=1.13=h1bed415_1
-  - libxml2=2.9.8=hf84eae3_0
-  - llvmlite=0.27.1=py36_0
-  - matplotlib=2.1.0=py36hba5de38_0
-  - mkl=2019.4=intel_235
-  - mkl-service=1.0.0=py36h7b7c402_11
-  - mkl_fft=1.0.13=py36h7b7c402_1
-  - mkl_random=1.0.4=py36h7b7c402_1
+  - cligj=0.5.0=py_0
+  - curl=7.71.1=he644dc0_8
+  - expat=2.2.9=he1b5a44_2
+  - fiona=1.8.17=py38h676c6b2_0
+  - fontconfig=2.13.1=h1056068_1002
+  - freetype=2.10.2=he06d7ca_0
+  - freexl=1.0.5=h516909a_1002
+  - gdal=3.1.2=py38hb61cb63_1
+  - geopandas=0.8.1=py_0
+  - geos=3.8.1=he1b5a44_0
+  - geotiff=1.6.0=ha04d9d0_1
+  - gettext=0.19.8.1=hc5be6a0_1002
+  - giflib=5.2.1=h516909a_2
+  - glib=2.66.1=h680cd38_0
+  - h5py=2.10.0=nompi_py38hfb01d0b_104
+  - hdf4=4.2.13=hf30be14_1003
+  - hdf5=1.10.6=nompi_h3c11f04_101
+  - icu=67.1=he1b5a44_0
+  - joblib=0.17.0=py_0
+  - jpeg=9d=h516909a_0
+  - json-c=0.13.1=hbfbb72e_1002
+  - kealib=1.4.13=h33137a7_1
+  - krb5=1.17.1=hfafb76e_3
+  - ld_impl_linux-64=2.35=h769bd43_9
+  - libblas=3.8.0=17_openblas
+  - libcblas=3.8.0=17_openblas
+  - libcurl=7.71.1=hcdd3856_8
+  - libdap4=3.20.6=h1d1bd15_1
+  - libedit=3.1.20191231=he28a2e2_2
+  - libev=4.33=h516909a_1
+  - libffi=3.2.1=he1b5a44_1007
+  - libgcc-ng=9.3.0=h5dbcf3e_17
+  - libgdal=3.1.2=hb2a6f5f_1
+  - libgfortran-ng=7.5.0=hae1eefd_17
+  - libgfortran4=7.5.0=hae1eefd_17
+  - libgomp=9.3.0=h5dbcf3e_17
+  - libiconv=1.16=h516909a_0
+  - libkml=1.3.0=h74f7ee3_1012
+  - liblapack=3.8.0=17_openblas
+  - libllvm10=10.0.1=he513fc3_3
+  - libnetcdf=4.7.4=nompi_h84807e1_105
+  - libnghttp2=1.41.0=h8cfc5f6_2
+  - libopenblas=0.3.10=pthreads_hb3c22a3_4
+  - libpng=1.6.37=hed695b0_2
+  - libpq=12.3=h5513abc_0
+  - libspatialindex=1.9.3=he1b5a44_3
+  - libspatialite=4.3.0a=h57f1b35_1039
+  - libssh2=1.9.0=hab1572f_5
+  - libstdcxx-ng=9.3.0=h2ae2ef3_17
+  - libtiff=4.1.0=hc7e4089_6
+  - libuuid=2.32.1=h14c3975_1000
+  - libwebp-base=1.1.0=h516909a_3
+  - libxcb=1.13=h14c3975_1002
+  - libxml2=2.9.10=h68273f3_2
+  - llvmlite=0.34.0=py38h4f45e52_1
+  - lz4-c=1.9.2=he1b5a44_3
   - munch=2.5.0=py_0
-  - netcdf4=1.3.1=py36h771828c_2
-  - numba=0.42.1=np116py36_2
-  - numexpr=2.6.8=py36_2
-  - numpy=1.16.2=py36h7b7c402_0
-  - numpy-base=1.16.2=py36_0
-  - openjpeg=2.3.0=h05c96fa_1
-  - openssl=1.0.2r=2
-  - pandas=0.24.1=py36_3
-  - pcre=8.43=he6710b0_0
-  - pip=10.0.1=py36_0
-  - pixman=0.38.0=h7b6447c_0
-  - poppler=0.60.1=hc909a00_0
-  - poppler-data=0.4.9=0
-  - proj4=4.9.3=hc8507d1_7
-  - pycparser=2.19=py36_0
-  - pydaal=2019.0.0.20180713=py36_1
-  - pyopenssl=19.0.0=py36_0
-  - pyparsing=2.4.0=py_0
-  - pyproj=1.9.5.1=py36_0
-  - pyqt=5.6.0=py36h22d08a2_6
-  - pysocks=1.7.0=py36_0
-  - python=3.6.8=7
-  - python-dateutil=2.6.0=py36_12
-  - pytz=2019.1=py_0
-  - pyyaml=4.1=py36_3
-  - qt=5.6.2=hd25b39d_14
-  - rasterio=0.36.0=py36hd410cfe_1
-  - rtree=0.9.0=py36h7b0cdae_0
-  - s3transfer=0.2.0=py36_0
-  - scikit-learn=0.19.2=py36h22eb022_0
-  - scipy=1.2.1=py36h7b7c402_3
-  - setuptools=39.0.1=py36_0
-  - shapely=1.6.4=py36h7ef4460_0
-  - sip=4.18.1=py36hf484d3e_2
-  - six=1.11.0=py36_3
-  - snuggs=1.4.6=py_0
-  - sqlite=3.27.2=6
-  - tbb=2019.6=intel_235
-  - tbb4py=2019.6=py36_intel_0
-  - tcl=8.6.4=24
-  - tk=8.6.4=29
-  - tornado=6.0.2=py36h7b6447c_0
-  - urllib3=1.25.3=py36_0
-  - wheel=0.31.0=py36_3
-  - xerces-c=3.2.2=h780794e_0
-  - xz=5.2.3=2
-  - yaml=0.1.7=2
-  - zlib=1.2.11=5
+  - ncurses=6.2=he1b5a44_1
+  - netcdf4=1.5.4=nompi_py38hec8b9af_102
+  - numba=0.51.2=py38hc5bc63f_0
+  - numpy=1.19.1=py38hbc27379_2
+  - openjpeg=2.3.1=h981e76c_3
+  - openssl=1.1.1h=h516909a_0
+  - pandas=1.1.3=py38h950e882_0
+  - pcre=8.44=he1b5a44_0
+  - pip=20.2.3=py_0
+  - pixman=0.38.0=h516909a_1003
+  - poppler=0.89.0=h4190859_1
+  - poppler-data=0.4.9=1
+  - postgresql=12.3=h8573dbc_0
+  - proj=7.1.0=h966b41f_1
+  - pthread-stubs=0.4=h14c3975_1001
+  - pyparsing=2.4.7=pyh9f0ad1d_0
+  - pyproj=2.6.1.post1=py38h8e47818_1
+  - python=3.8.5=h1103e12_9_cpython
+  - python-dateutil=2.8.1=py_0
+  - python_abi=3.8=1_cp38
+  - pytz=2020.1=pyh9f0ad1d_0
+  - rasterio=1.1.7=py38h676c6b2_0
+  - readline=8.0=he28a2e2_2
+  - rtree=0.9.4=py38h08f867b_1
+  - scikit-learn=0.23.2=py38hee58b96_0
+  - scipy=1.5.2=py38h8c5af15_0
+  - setuptools=49.6.0=py38h32f6830_1
+  - shapely=1.7.1=py38hc7361b7_0
+  - six=1.15.0=pyh9f0ad1d_0
+  - snuggs=1.4.7=py_0
+  - sqlite=3.33.0=h4cf870e_0
+  - tbb=2020.2=hc9558a2_0
+  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tiledb=2.0.8=h3effe38_1
+  - tk=8.6.10=hed695b0_0
+  - tzcode=2020a=h516909a_0
+  - wheel=0.35.1=pyh9f0ad1d_0
+  - xerces-c=3.2.3=hfe33f54_1
+  - xorg-kbproto=1.0.7=h14c3975_1002
+  - xorg-libice=1.0.10=h516909a_0
+  - xorg-libsm=1.2.3=h84519dc_1000
+  - xorg-libx11=1.6.12=h516909a_0
+  - xorg-libxau=1.0.9=h14c3975_0
+  - xorg-libxdmcp=1.1.3=h516909a_0
+  - xorg-libxext=1.3.4=h516909a_0
+  - xorg-libxrender=0.9.10=h516909a_1002
+  - xorg-renderproto=0.11.1=h14c3975_1002
+  - xorg-xextproto=7.3.0=h14c3975_1002
+  - xorg-xproto=7.0.31=h14c3975_1007
+  - xz=5.2.5=h516909a_1
+  - zlib=1.2.11=h516909a_1009
+  - zstd=1.4.5=h6597ccf_2
   - pip:
     - "git+https://github.com/chaneyn/geospatialtools.git@dev_nate"
-    - mpi4py==3.0.2
-    - scikit-umfpack==0.3.2
-
+    - mpi4py==3.0.3
