--- a/model/pyNoahMP/src/Noah/Makefile
+++ b/model/pyNoahMP/src/Noah/Makefile
@@ -6,12 +6,15 @@
 include ../user_build_options
 
 OBJS = \
+	module_sf_noahmpdrv.o \
 	module_sf_noahmplsm.o \
 	module_sf_noahmp_glacier.o \
 	module_sf_noahmp_groundwater.o \
-	module_sf_myjsfc.o \
-	module_sf_sfclay.o \
-        pyNoahMP.o
+	module_sf_gecros.o \
+	module_sf_urban.o \
+	module_sf_bep.o \
+	module_sf_bem.o \
+	module_sf_bep_bem.o
 
 CPPHRLDAS = -D_HRLDAS_OFFLINE_
 
@@ -21,14 +24,18 @@ all:	$(OBJS)
 	@echo ""
 	$(RM) $(*).f90
 	$(CPP) $(CPPFLAGS) $(CPPHRLDAS) $(*).F > $(*).f90
-	$(COMPILERF90) -o $(@) -c $(MODFLAG). $(MODFLAG)../Utility_routines $(F90FLAGS) $(LIBS) $(FREESOURCE) $(*).f90
+	$(COMPILERF90) -o $(@) -c -I../Utility_routines $(F90FLAGS) $(FREESOURCE) $(*).f90
 	@echo ""
 
 #
 # Dependencies:
 #
-module_sf_noahmplsm.o:	module_sf_myjsfc.o module_sf_sfclay.o
-#module_sf_noahmpdrv.o:	module_sf_noahmplsm.o module_sf_noahmp_glacier.o module_sf_noahmp_groundwater.o
+module_sf_noahmplsm.o:	module_sf_gecros.o
+module_sf_noahmpdrv.o:	module_sf_noahmplsm.o module_sf_noahmp_glacier.o module_sf_noahmp_groundwater.o \
+                        module_sf_urban.o module_sf_bep.o module_sf_bep_bem.o
+module_sf_noahmp_groundwater.o: module_sf_noahmplsm.o
+module_sf_bep.o:	module_sf_urban.o
+module_sf_bep_bem.o:	module_sf_urban.o module_sf_bem.o
 
 #
 # This command cleans up object (etc) files:
