--- a/yml/HB_linux64.yml
+++ b/yml/HB_linux64.yml
@@ -5,126 +5,146 @@ dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=1_gnu
   - affine=2.3.0=py_0
-  - attrs=20.2.0=pyh9f0ad1d_0
-  - boost-cpp=1.74.0=h9359b55_0
-  - bzip2=1.0.8=h516909a_3
-  - c-ares=1.16.1=h516909a_3
-  - ca-certificates=2020.6.20=hecda079_0
-  - cairo=1.16.0=h3fc0475_1005
-  - certifi=2020.6.20=py38h32f6830_0
-  - cfitsio=3.470=hce51eda_6
-  - cftime=1.2.1=py38h8790de6_0
-  - click=7.1.2=pyh9f0ad1d_0
+  - attrs=21.4.0=pyhd8ed1ab_0
+  - blosc=1.21.0=h9c3ff4c_0
+  - boost-cpp=1.74.0=h6cacc03_7
+  - bzip2=1.0.8=h7f98852_4
+  - c-ares=1.18.1=h7f98852_0
+  - ca-certificates=2021.10.8=ha878542_0
+  - cached-property=1.5.2=hd8ed1ab_1
+  - cached_property=1.5.2=pyha770c72_1
+  - cairo=1.16.0=ha00ac49_1009
+  - cfitsio=4.0.0=h9a35b8e_0
   - click-plugins=1.1.1=py_0
-  - cligj=0.5.0=py_0
-  - curl=7.71.1=he644dc0_8
-  - expat=2.2.9=he1b5a44_2
-  - fiona=1.8.17=py38h676c6b2_0
-  - fontconfig=2.13.1=h1056068_1002
-  - freetype=2.10.2=he06d7ca_0
-  - freexl=1.0.5=h516909a_1002
-  - gdal=3.1.2=py38hb61cb63_1
-  - geopandas=0.8.1=py_0
-  - geos=3.8.1=he1b5a44_0
-  - geotiff=1.6.0=ha04d9d0_1
-  - gettext=0.19.8.1=hc5be6a0_1002
-  - giflib=5.2.1=h516909a_2
-  - glib=2.66.1=h680cd38_0
-  - h5py=2.10.0=nompi_py38hfb01d0b_104
-  - hdf4=4.2.13=hf30be14_1003
-  - hdf5=1.10.6=nompi_h3c11f04_101
-  - icu=67.1=he1b5a44_0
-  - joblib=0.17.0=py_0
-  - jpeg=9d=h516909a_0
-  - json-c=0.13.1=hbfbb72e_1002
-  - kealib=1.4.13=h33137a7_1
-  - krb5=1.17.1=hfafb76e_3
-  - ld_impl_linux-64=2.35=h769bd43_9
-  - libblas=3.8.0=17_openblas
-  - libcblas=3.8.0=17_openblas
-  - libcurl=7.71.1=hcdd3856_8
-  - libdap4=3.20.6=h1d1bd15_1
+  - cligj=0.7.2=pyhd8ed1ab_1
+  - curl=7.81.0=h494985f_0
+  - expat=2.4.6=h27087fc_0
+  - font-ttf-dejavu-sans-mono=2.37=hab24e00_0
+  - font-ttf-inconsolata=3.000=h77eed37_0
+  - font-ttf-source-code-pro=2.038=h77eed37_0
+  - font-ttf-ubuntu=0.83=hab24e00_0
+  - fontconfig=2.13.96=ha180cfb_0
+  - fonts-conda-ecosystem=1=0
+  - fonts-conda-forge=1=0
+  - freetype=2.10.4=h0708190_1
+  - freexl=1.0.6=h7f98852_0
+  - geos=3.10.2=h9c3ff4c_0
+  - geotiff=1.7.0=h6593c0a_6
+  - gettext=0.19.8.1=h73d1719_1008
+  - giflib=5.2.1=h36c2ea0_2
+  - hdf4=4.2.15=h10796ff_3
+  - hdf5=1.12.1=nompi_h7f166f4_103
+  - icu=69.1=h9c3ff4c_0
+  - jbig=2.1=h7f98852_2003
+  - joblib=1.1.0=pyhd8ed1ab_0
+  - jpeg=9e=h7f98852_0
+  - json-c=0.15=h98cffda_0
+  - kealib=1.4.14=h87e4c3c_3
+  - keyutils=1.6.1=h166bdaf_0
+  - krb5=1.19.2=h08a2579_4
+  - lcms2=2.12=hddcbb42_0
+  - ld_impl_linux-64=2.36.1=hea4e1c9_2
+  - lerc=3.0=h9c3ff4c_0
+  - libblas=3.9.0=13_linux64_openblas
+  - libcblas=3.9.0=13_linux64_openblas
+  - libcurl=7.81.0=h494985f_0
+  - libdap4=3.20.6=hd7c4107_2
+  - libdeflate=1.10=h7f98852_0
   - libedit=3.1.20191231=he28a2e2_2
   - libev=4.33=h516909a_1
-  - libffi=3.2.1=he1b5a44_1007
-  - libgcc-ng=9.3.0=h5dbcf3e_17
-  - libgdal=3.1.2=hb2a6f5f_1
-  - libgfortran-ng=7.5.0=hae1eefd_17
-  - libgfortran4=7.5.0=hae1eefd_17
-  - libgomp=9.3.0=h5dbcf3e_17
+  - libffi=3.4.2=h7f98852_5
+  - libgcc-ng=11.2.0=h1d223b6_13
+  - libgdal=3.4.1=hff5c5e8_5
+  - libgfortran-ng=11.2.0=h69a702a_13
+  - libgfortran5=11.2.0=h5c6108e_13
+  - libglib=2.70.2=h174f98d_4
+  - libgomp=11.2.0=h1d223b6_13
   - libiconv=1.16=h516909a_0
-  - libkml=1.3.0=h74f7ee3_1012
-  - liblapack=3.8.0=17_openblas
-  - libllvm10=10.0.1=he513fc3_3
-  - libnetcdf=4.7.4=nompi_h84807e1_105
-  - libnghttp2=1.41.0=h8cfc5f6_2
-  - libopenblas=0.3.10=pthreads_hb3c22a3_4
-  - libpng=1.6.37=hed695b0_2
-  - libpq=12.3=h5513abc_0
-  - libspatialindex=1.9.3=he1b5a44_3
-  - libspatialite=4.3.0a=h57f1b35_1039
-  - libssh2=1.9.0=hab1572f_5
-  - libstdcxx-ng=9.3.0=h2ae2ef3_17
-  - libtiff=4.1.0=hc7e4089_6
-  - libuuid=2.32.1=h14c3975_1000
-  - libwebp-base=1.1.0=h516909a_3
-  - libxcb=1.13=h14c3975_1002
-  - libxml2=2.9.10=h68273f3_2
-  - llvmlite=0.34.0=py38h4f45e52_1
-  - lz4-c=1.9.2=he1b5a44_3
+  - libkml=1.3.0=h238a007_1014
+  - liblapack=3.9.0=13_linux64_openblas
+  - libllvm11=11.1.0=hf817b99_3
+  - libnetcdf=4.8.1=nompi_hb3fd0d9_101
+  - libnghttp2=1.47.0=he49606f_0
+  - libnsl=2.0.0=h7f98852_0
+  - libopenblas=0.3.18=pthreads_h8fe5266_0
+  - libpng=1.6.37=h21135ba_2
+  - libpq=14.2=h676c864_0
+  - librttopo=1.1.0=hf69c175_9
+  - libspatialite=5.0.1=h0e567f8_14
+  - libssh2=1.10.0=ha35d2d1_2
+  - libstdcxx-ng=11.2.0=he4da1e4_13
+  - libtiff=4.3.0=h542a066_3
+  - libuuid=2.32.1=h7f98852_1000
+  - libwebp-base=1.2.2=h7f98852_1
+  - libxcb=1.13=h7f98852_1004
+  - libxml2=2.9.12=h885dcf4_1
+  - libzip=1.8.0=h1c5bbd1_1
+  - libzlib=1.2.11=h36c2ea0_1013
+  - lz4-c=1.9.3=h9c3ff4c_1
   - munch=2.5.0=py_0
-  - ncurses=6.2=he1b5a44_1
-  - netcdf4=1.5.4=nompi_py38hec8b9af_102
-  - numba=0.51.2=py38hc5bc63f_0
-  - numpy=1.19.1=py38hbc27379_2
-  - openjpeg=2.3.1=h981e76c_3
-  - openssl=1.1.1h=h516909a_0
-  - pandas=1.1.3=py38h950e882_0
-  - pcre=8.44=he1b5a44_0
-  - pip=20.2.3=py_0
-  - pixman=0.38.0=h516909a_1003
-  - poppler=0.89.0=h4190859_1
-  - poppler-data=0.4.9=1
-  - postgresql=12.3=h8573dbc_0
-  - proj=7.1.0=h966b41f_1
-  - pthread-stubs=0.4=h14c3975_1001
-  - pyparsing=2.4.7=pyh9f0ad1d_0
-  - pyproj=2.6.1.post1=py38h8e47818_1
-  - python=3.8.5=h1103e12_9_cpython
-  - python-dateutil=2.8.1=py_0
-  - python_abi=3.8=1_cp38
-  - pytz=2020.1=pyh9f0ad1d_0
-  - rasterio=1.1.7=py38h676c6b2_0
-  - readline=8.0=he28a2e2_2
-  - rtree=0.9.4=py38h08f867b_1
-  - scikit-learn=0.23.2=py38hee58b96_0
-  - scipy=1.5.2=py38h8c5af15_0
-  - setuptools=49.6.0=py38h32f6830_1
-  - shapely=1.7.1=py38hc7361b7_0
-  - six=1.15.0=pyh9f0ad1d_0
+  - ncurses=6.3=h9c3ff4c_0
+  - nspr=4.32=h9c3ff4c_1
+  - nss=3.74=hb5efdd6_0
+  - openjpeg=2.4.0=hb52868f_1
+  - openssl=3.0.0=h7f98852_2
+  - pcre=8.45=h9c3ff4c_0
+  - pip=22.0.3=pyhd8ed1ab_0
+  - pixman=0.40.0=h36c2ea0_0
+  - poppler=22.01.0=ha39eefc_0
+  - poppler-data=0.4.11=hd8ed1ab_0
+  - postgresql=14.2=hce44dc1_0
+  - proj=8.2.1=h277dcde_0
+  - pthread-stubs=0.4=h36c2ea0_1001
+  - pyparsing=3.0.7=pyhd8ed1ab_0
+  - python=3.10.2=hc74c709_3_cpython
+  - python-dateutil=2.8.2=pyhd8ed1ab_0
+  - python_abi=3.10=2_cp310
+  - readline=8.1=h46c0cb4_0
+  - six=1.16.0=pyh6c4a22f_0
   - snuggs=1.4.7=py_0
-  - sqlite=3.33.0=h4cf870e_0
-  - tbb=2020.2=hc9558a2_0
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
-  - tiledb=2.0.8=h3effe38_1
-  - tk=8.6.10=hed695b0_0
-  - tzcode=2020a=h516909a_0
-  - wheel=0.35.1=pyh9f0ad1d_0
-  - xerces-c=3.2.3=hfe33f54_1
-  - xorg-kbproto=1.0.7=h14c3975_1002
-  - xorg-libice=1.0.10=h516909a_0
-  - xorg-libsm=1.2.3=h84519dc_1000
-  - xorg-libx11=1.6.12=h516909a_0
-  - xorg-libxau=1.0.9=h14c3975_0
-  - xorg-libxdmcp=1.1.3=h516909a_0
-  - xorg-libxext=1.3.4=h516909a_0
-  - xorg-libxrender=0.9.10=h516909a_1002
-  - xorg-renderproto=0.11.1=h14c3975_1002
-  - xorg-xextproto=7.3.0=h14c3975_1002
-  - xorg-xproto=7.0.31=h14c3975_1007
+  - sqlite=3.37.0=h9cd32fc_0
+  - threadpoolctl=3.1.0=pyh8a188c0_0
+  - tiledb=2.7.0=h3f4058f_0
+  - tk=8.6.12=h27826a3_0
+  - tzcode=2021e=h7f98852_0
+  - tzdata=2021e=he74cb21_0
+  - wheel=0.37.1=pyhd8ed1ab_0
+  - xerces-c=3.2.3=h8ce2273_4
+  - xorg-kbproto=1.0.7=h7f98852_1002
+  - xorg-libice=1.0.10=h7f98852_0
+  - xorg-libsm=1.2.3=hd9c2040_1000
+  - xorg-libx11=1.7.2=h7f98852_0
+  - xorg-libxau=1.0.9=h7f98852_0
+  - xorg-libxdmcp=1.1.3=h7f98852_0
+  - xorg-libxext=1.3.4=h7f98852_1
+  - xorg-libxrender=0.9.10=h7f98852_1003
+  - xorg-renderproto=0.11.1=h7f98852_1002
+  - xorg-xextproto=7.3.0=h7f98852_1002
+  - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
-  - zlib=1.2.11=h516909a_1009
-  - zstd=1.4.5=h6597ccf_2
+  - zlib=1.2.11=h36c2ea0_1013
+  - zstd=1.5.2=ha95c52a_0
   - pip:
+    - certifi==2021.10.8
+    - cftime==1.6.0
+    - click==8.0.4
+    - fiona==1.8.21
+    - gdal==3.4.1
+    - geopandas==0.10.2
+    - geospatialtools==0.0.0
+    - h5py==3.6.0
+    - llvmlite==0.38.0
+    - mpi4py==3.1.3
+    - netcdf4==1.5.8
+    - numba==0.55.1
+    - numpy==1.21.5
+    - pandas==1.4.1
+    - pyproj==3.3.0
+    - pytz==2021.3
+    - rasterio==1.2.10
+    - scikit-learn==1.0.2
+    - scipy==1.8.0
+    - setuptools==60.9.3
+    - shapely==1.8.0
     - "git+https://github.com/chaneyn/geospatialtools.git@dev_nate"
-    - mpi4py==3.0.3
+prefix: /home/nc153/software/miniconda3/envs/HB
