--- a/yml/HBenv.yml
+++ b/yml/HBenv.yml
@@ -2,15 +2,14 @@ name: HBenv
 channels:
   - conda-forge
   - defaults
+  - anaconda
 dependencies:
   - _libgcc_mutex=0.1=conda_forge
   - _openmp_mutex=4.5=2_gnu
-  - affine=2.3.1=pyhd8ed1ab_0
   - alsa-lib=1.2.6.1=h7f98852_0
   - aom=3.4.0=h27087fc_1
   - asciitree=0.3.3=py_2
   - attr=2.5.1=h166bdaf_0
-  - attrs=21.4.0=pyhd8ed1ab_0
   - binutils_impl_linux-64=2.36.1=h193b22a_2
   - blosc=1.21.1=h83bc5f7_3
   - boost-cpp=1.74.0=h75c5d50_8
@@ -22,9 +21,10 @@ dependencies:
   - cached-property=1.5.2=hd8ed1ab_1
   - cached_property=1.5.2=pyha770c72_1
   - cairo=1.16.0=ha61ee94_1011
+  - cartopy=0.20.3=py39hed214b2_1
+  - certifi=2022.6.15=py39hf3d152e_0
   - cfitsio=4.1.0=hd9d235c_0
-  - click-plugins=1.1.1=py_0
-  - cligj=0.7.2=pyhd8ed1ab_1
+  - cftime=1.6.1=py39hd257fcd_0
   - curl=7.83.1=h7bff187_0
   - cycler=0.11.0=pyhd8ed1ab_0
   - dbus=1.13.6=h5008d03_3
@@ -39,11 +39,13 @@ dependencies:
   - fontconfig=2.14.0=h8e229c2_0
   - fonts-conda-ecosystem=1=0
   - fonts-conda-forge=1=0
+  - fonttools=4.34.4=py39hb9d737c_0
   - freeglut=3.2.2=h9c3ff4c_1
   - freetype=2.10.4=h0708190_1
   - freexl=1.0.6=h7f98852_0
   - gcc=12.1.0=h9ea6d83_10
   - gcc_impl_linux-64=12.1.0=hea43390_16
+  - gdal=3.5.1=py39hc691d54_1
   - geos=3.11.0=h27087fc_0
   - geotiff=1.7.1=h4fc65e6_3
   - gettext=0.19.8.1=h73d1719_1008
@@ -57,11 +59,11 @@ dependencies:
   - graphite2=1.3.13=h58526e2_1001
   - gst-plugins-base=1.20.3=hf6a322e_0
   - gstreamer=1.20.3=hd4edc92_0
+  - h5py=3.7.0=nompi_py39h63b1161_100
   - harfbuzz=4.4.1=hf9f4e7c_0
   - hdf4=4.2.15=h10796ff_3
   - hdf5=1.12.1=nompi_h2386368_104
   - icu=70.1=h27087fc_0
-  - importlib_metadata=4.11.4=hd8ed1ab_0
   - jack=1.9.18=h8c3723f_1002
   - jasper=2.0.33=ha77e612_0
   - joblib=1.1.0=pyhd8ed1ab_0
@@ -70,6 +72,7 @@ dependencies:
   - kealib=1.4.15=hfe1a663_0
   - kernel-headers_linux-64=2.6.32=he073ed8_15
   - keyutils=1.6.1=h166bdaf_0
+  - kiwisolver=1.4.3=py39hf939315_0
   - krb5=1.19.3=h3790be6_0
   - lame=3.100=h7f98852_1001
   - lcms2=2.12=hddcbb42_0
@@ -107,13 +110,14 @@ dependencies:
   - libkml=1.3.0=h238a007_1014
   - liblapack=3.9.0=15_linux64_openblas
   - liblapacke=3.9.0=15_linux64_openblas
+  - libllvm10=10.0.1=he513fc3_3
   - libllvm14=14.0.6=he0ac6c6_0
   - libnetcdf=4.8.1=nompi_h329d8a1_102
   - libnghttp2=1.47.0=h727a467_0
   - libnsl=2.0.0=h7f98852_0
   - libogg=1.3.4=h7f98852_1
   - libopenblas=0.3.20=pthreads_h78a6416_0
-  - libopencv=4.5.5=py310hcb97b83_13
+  - libopencv=4.5.5=py39hd011c1b_13
   - libopus=1.3.1=h7f98852_1
   - libpciaccess=0.16=h516909a_0
   - libpng=1.6.37=h753d276_3
@@ -141,25 +145,34 @@ dependencies:
   - libxml2=2.9.14=h22db469_3
   - libzip=1.9.2=hc869a4a_0
   - libzlib=1.2.12=h166bdaf_1
+  - llvmlite=0.36.0=py39h1bbdace_0
   - lz4-c=1.9.3=h9c3ff4c_1
-  - matplotlib-base=3.5.2=py310h5701ce4_0
+  - matplotlib=3.5.2=py39hf3d152e_0
+  - matplotlib-base=3.5.2=py39h700656a_0
   - mpi=1.0=mpich
+  - mpi4py=3.1.3=py39h32b9844_1
   - mpich=4.0.2=h846660c_100
-  - msgpack-python=1.0.4=py310hbf28c38_0
+  - msgpack-python=1.0.4=py39hf939315_0
   - munkres=1.1.4=pyh9f0ad1d_0
   - mysql-common=8.0.29=haf5c9bc_1
   - mysql-libs=8.0.29=h28c427c_1
   - ncurses=6.3=h27087fc_1
+  - netcdf4=1.6.0=nompi_py39hf5a3a3f_100
   - nettle=3.8=hc379101_0
   - nspr=4.32=h9c3ff4c_1
   - nss=3.78=h2350873_0
-  - opencv=4.5.5=py310hff52083_13
+  - numba=0.53.1=py39h56b8d98_1
+  - numcodecs=0.10.0=py39h5a03fae_1
+  - numpy=1.23.0=py39hba7629e_0
+  - opencv=4.5.5=py39hf3d152e_13
   - openh264=2.2.0=h6239696_0
   - openjpeg=2.4.0=hb52868f_1
   - openssl=1.1.1q=h166bdaf_0
   - p11-kit=0.24.1=hc5aa10d_0
   - packaging=21.3=pyhd8ed1ab_0
+  - pandas=1.4.3=py39h1832856_0
   - pcre=8.45=h9c3ff4c_0
+  - pillow=9.2.0=py39hae2aec6_0
   - pip=22.1.2=pyhd8ed1ab_0
   - pixman=0.40.0=h36c2ea0_0
   - ply=3.11=py_1
@@ -170,19 +183,25 @@ dependencies:
   - proj=9.0.1=h93bde94_1
   - pthread-stubs=0.4=h36c2ea0_1001
   - pulseaudio=14.0=h7f54b18_8
-  - py-opencv=4.5.5=py310hfdc917e_13
+  - py-opencv=4.5.5=py39hef51801_13
   - pyparsing=3.0.9=pyhd8ed1ab_0
-  - pyqt=5.15.7=py310h29803b5_0
+  - pyproj=3.3.1=py39hdcf6798_1
+  - pyqt=5.15.7=py39h18e9c17_0
+  - pyqt5-sip=12.11.0=py39h5a03fae_0
   - pyshp=2.3.0=pyhd8ed1ab_0
-  - python=3.10.5=h582c2e5_0_cpython
+  - python=3.9.13=h9a8a25e_0_cpython
   - python-dateutil=2.8.2=pyhd8ed1ab_0
-  - python_abi=3.10=2_cp310
+  - python_abi=3.9=2_cp39
   - pytz=2022.1=pyhd8ed1ab_0
   - qt-main=5.15.4=ha5833f6_2
   - readline=8.1.2=h0f457ee_0
+  - scikit-learn=1.1.1=py39h4037b75_0
+  - scipy=1.8.1=py39he49c0e8_0
+  - setuptools=63.1.0=py39hf3d152e_0
+  - shapely=1.8.2=py39h68ae834_3
+  - sip=6.6.2=py39h5a03fae_0
   - six=1.16.0=pyh6c4a22f_0
   - snappy=1.1.9=hbd366e4_1
-  - snuggs=1.4.7=py_0
   - sqlite=3.39.0=h4ff8645_0
   - svt-av1=1.1.0=h27087fc_1
   - sysroot_linux-64=2.12=he073ed8_15
@@ -190,14 +209,15 @@ dependencies:
   - tiledb=2.9.5=h1e4a385_0
   - tk=8.6.12=h27826a3_0
   - toml=0.10.2=pyhd8ed1ab_0
+  - tornado=6.2=py39hb9d737c_0
   - typing-extensions=4.3.0=hd8ed1ab_0
   - typing_extensions=4.3.0=pyha770c72_0
   - tzcode=2022a=h166bdaf_0
   - tzdata=2022a=h191b570_0
+  - unicodedata2=14.0.0=py39hb9d737c_1
   - wheel=0.37.1=pyhd8ed1ab_0
   - x264=1!161.3030=h7f98852_1
   - x265=3.5=h924138e_3
-  - xarray=2022.3.0=pyhd8ed1ab_0
   - xcb-util=0.4.0=h166bdaf_0
   - xcb-util-image=0.4.0=h166bdaf_0
   - xcb-util-keysyms=0.4.0=h166bdaf_0
@@ -221,37 +241,7 @@ dependencies:
   - xorg-xproto=7.0.31=h7f98852_1007
   - xz=5.2.5=h516909a_1
   - zarr=2.12.0=pyhd8ed1ab_0
-  - zipp=3.8.0=pyhd8ed1ab_0
   - zlib=1.2.12=h166bdaf_1
   - zstd=1.5.2=h8a70e8d_2
   - pip:
-    - cartopy==0.20.3
-    - certifi==2022.6.15
-    - cftime==1.6.1
-    - click==8.1.3
-    - fonttools==4.34.4
-    - gdal==3.5.1
     - "git+https://github.com/chaneyn/geospatialtools.git"
-    - h5py==3.7.0
-    - importlib-metadata==4.11.4
-    - kiwisolver==1.4.3
-    - matplotlib==3.5.2
-    - mpi4py==3.1.3
-    - msgpack==1.0.4
-    - netcdf4==1.6.0
-    - numcodecs==0.10.0
-    - numpy==1.23.0
-    - pandas==1.4.3
-    - pillow==9.2.0
-    - pyproj==3.3.1
-    - pyqt5==5.15.7
-    - pyqt5-sip==12.11.0
-    - rasterio==1.3.0
-    - scikit-learn==1.1.1
-    - scipy==1.8.1
-    - setuptools==63.1.0
-    - shapely==1.8.2
-    - sip==6.6.2
-    - tornado==6.2
-    - unicodedata2==14.0.0
-prefix: /home/noemi/programs/conda/envs/HBenv
