--- a/yml/HB_linux64.yml
+++ b/yml/HB_linux64.yml
@@ -162,4 +162,4 @@ dependencies:
     - scipy==1.8.0
     - setuptools==59.8.0
     - shapely==1.8.0
-    - "git+https://github.com/chaneyn/geospatialtools.git@dev_nate"
+    - "git+https://github.com/chaneyn/geospatialtools.git@dev_nate_2023"
