--- a/yml/HB_linux64.yml
+++ b/yml/HB_linux64.yml
@@ -1,4 +1,4 @@
-name: HB
+name: HBnew
 channels:
   - conda-forge
 dependencies:
@@ -145,7 +145,7 @@ dependencies:
     - fiona==1.8.21
     - gdal==3.4.1
     - geopandas==0.10.2
-    - geospatialtools==0.0.0
+    #- geospatialtools==0.0.0
     - h5py==3.6.0
     - importlib-metadata==4.11.4
     - llvmlite==0.38.0
@@ -162,4 +162,4 @@ dependencies:
     - scipy==1.8.0
     - setuptools==59.8.0
     - shapely==1.8.0
-    - "git+https://github.com/chaneyn/geospatialtools.git@dev_nate_2023"
+    #- "git+https://github.com/chaneyn/geospatialtools.git@dev_nate_2023"
